--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-25  Frank Ch. Eigler <fche@cygnus.com>
+
+	* ltmain.in: file_magic check would not avoid cyclic links.
+
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltmain.in: Remove object files before writing to them, to avoid
