--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in: Revert to stripping .exe on all platforms.
+	* TODO: Note about this problem.  Demo is fixed on win32.  -Wl and 
+	-Wc are implemented for release 1.4.  Support `empty' convenience
+	libraries.
+
 	* ltconfig.in (solaris*, ld_shlibs): Do not enable shared
 	libraries with GNU ld 2.8.*, it's broken.  Emit a warning
 	suggesting an upgrade.
@@ -20,7 +25,7 @@
 
 	* doc/libtool.texi: fix "wierd" typo :)
 	* ltmain.in: strip off the .exe suffix only on *Win
-	  (Reported by Matthew D. Langston <langston@SLAC.Stanford.EDU>)
+	Reported by Matthew D. Langston <langston@SLAC.Stanford.EDU>
 
 1999-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
