--- a/TODO
+++ b/TODO
@@ -38,8 +38,10 @@ In the future:
   possible would greatly improve libltdl's ability to be embedded in and 
   used by other systems.
 
-* Fix */demo on win32.
-This may require resolving some of the items below.
+* Arrange that EXEEXT suffixes are stripped from wrapper script names
+only when needed, and that a timestamp file or a wrapper program is
+created with the EXEEXT suffix, so that `make' doesn't build it every
+time.
 
 * Figure out how to use data items in dlls with win32.
 The difficult part is compiling each object which will be linked with an
@@ -77,11 +79,10 @@ libtool's command line, and passing them down to the linker, if "$wl"
 is `-Wl,', or stripping the `-Wl,' part if we're calling `ld'
 directly.  We could also introduce `-Wc,flag' and `-Xcompiler flag' to
 allow unrecognized flags to be passed to the compiler, after stripping
-by libtool.
+by libtool.  This is already implemented in the CVS tree.
 
-* Another form of convenience library, suggested by Alexandre Oliva,
-is to have undocumented utility libraries, where only the shared
-version is installed.
+* Another form of convenience library is to have undocumented utility
+libraries, where only the shared version is installed.
 
 * We could use libtool object convenience libraries that resolve
 symbols to be included in a libtool archive.  This would require some
@@ -90,9 +91,11 @@ sort of -whole-archive option, as well.
 * Currently, convenience libraries (.al) are built from .lo objects,
 except when --disable-shared.  When we can build both shared and
 static libraries, we should probably create a .al out of .lo objects
-and also a .a out of .o objects.  The .al would only be used to
-create shared libraries, whereas the .a would be used for creating
-static libraries and programs.
+and also a .a out of .o objects.  The .al would only be used to create
+shared libraries, whereas the .a would be used for creating static
+libraries and programs.  We could also explicitly support `empty'
+convenience libraries, that behave as macros that expand to a set of
+-Rs, -Ls and -ls switches.
 
 * We should include tests with convenience libraries and reloadable
 objects in the testsuite.
