--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in: Revert to stripping .exe on all platforms.
+	* TODO: Note about this problem.  Demo is fixed on win32.  Support
+	`empty' convenience libraries.
+
 	* ltconfig.in (solaris*, ld_shlibs): Do not enable shared
 	libraries with GNU ld 2.8.*, it's broken.  Emit a warning
 	suggesting an upgrade.
