--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* config.guess: Synch with GNU common.
+
 	* ltmain.in: Revert to stripping .exe on all platforms.
 	* TODO: Note about this problem.  Demo is fixed on win32.  Support
 	`empty' convenience libraries.
