--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* NEWS: List fixed problems.
+	* doc/PLATFORMS: Tested for 1.3.2.
+
 	* config.guess: Synch with GNU common.
 
 	* ltmain.in: Revert to stripping .exe on all platforms.
