--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* configure.in: Bumped to 1.3.2.
+
 	* NEWS: List fixed problems.
 	* doc/PLATFORMS: Tested for 1.3.2.
 
