--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* configure.in: Bumped to 1.3.2a.
+
+1999-05-26  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	GNU Libtool 1.3.2 was released.
+
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* configure.in: Bumped to 1.3.2.
