--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-05-26  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	GNU libtool 1.3.2 was released.
+
 1999-05-25  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* NEWS: List fixed problems.
