--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* NEWS: Mention the two bugfixes below.
+
 	* ltmain.in: Only create directory into which to extract
 	convenience libraries when $convenience is not empty.  It would
 	always be created on systems that did not support
