--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in CVS version 1.3.2a, Libtool team:
+* Do not pass -whole-archive or equivalent to symbol extractor.
+* Create directory to expand convenience libraries only when needed.
+
 New in 1.3.2: 1999-05-26, CVS version 1.3.1a, Libtool team:
 * Avoid circular links of objects and libraries.
 * Look for dlerror when dlopen was found in -ldl (typo).
