* ltmain.in: when linking another library add its   -L paths to lib_search_path (otherwise the deplibs check will fail)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-05-24 Thomas Tanner  <tanner@ffii.org>
+
+	* ltmain.in: when linking another library add its
+	  -L paths to lib_search_path (otherwise the deplibs check will fail)
+
 1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>, Olly Betts  <olly@muscat.co.uk>
 
 	* ltmain.in: Expand convenience libraries when creating reloadable 
