--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-06-05  Mark Kettenis  <kettenis@gnu.org>
+
+	* ltconfig.in: Update support for the Hurd.  Make sure that the
+	soname includes the major version number and create the	right
+	links.  Allow shared objects without the `lib' prefix and without
+	version information.
+
 1999-05-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* TODO: Remove the short list of people interested in C++
