--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-06-06  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in: Support new GNU ld --help output format.
+	* NEWS:  Likewise.
+	Reported by Gaël Quéri <gael@baoule.dyndns.org> and
+	H.J. Lu <hjl@varesearch.com>.
+
 1999-06-05  Mark Kettenis  <kettenis@gnu.org>
 
 	* ltconfig.in: Update support for the Hurd.  Make sure that the
