--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-06-08  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* ltconfig.in (LN_S): Accept, in order of decreasing preference:
+	the cached value; an environment setting; ``ln -s'' if it works;
+	``ln'' if ``ln -s'' doesn't appear to work.
+
 	* ltconfig.in (objext): Accept, in order of decreasing preference:
 	the cached value; the result of a test object compilation.
 
