--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-06-14  Thomas Tanner  <tanner@ffii.org>
+
+	* ltmain.in: minor reformatting
+
 1999-06-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in: Reverted June 6's patch for new GNU ld output, it
