--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-06-16  Gary V. Vaughan  <gary@oranda.demon.co.uk>
 
+	* libltdl/configure.in (ac_cv_lib_dl_dlopen): missing "x" in test
+	comparison corrected.
+
 	* libltdl/ltdl.c (sys_wll_open): libltdl expects this function to
 	fail if it is unable to physically load the library.  Sadly,
 	LoadLibrary will search the loaded libraries for a match and
