--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -1134,11 +1134,15 @@ the name of the C compiler, and contain the @samp{-c} compiler flag so
 that only an object file is created.
 
 Libtool determines the name of the output file by removing the directory
-component from the source file name, then substituting the C source code
-suffix @samp{.c} with the library object suffix, @samp{.lo}.
+component from the source file name, then substituting the source code
+suffix (e.g. @samp{.c} for C soure code) with the library object suffix,
+@samp{.lo}.
 
 If shared libraries are being built, any necessary PIC generation flags
 are substituted into the compilation command.
+You can pass compiler and linker specific flags using @samp{-Wc,@var{flag}}
+and @samp{-Xcompiler @var{flag}} or @samp{-Wl,@var{flag}} and
+@samp{-Xlinker @var{flag}}, respectively.
 
 If the @samp{-static} option is given, then a @samp{.o} file is built,
 even if libtool was configured with @samp{--disable-static}.
@@ -1199,6 +1203,9 @@ the program is linked with @samp{-static} or @samp{-all-static}.
 Otherwise, no effect.  If @var{file} is @code{self} libtool will make
 sure that the program can @code{dlopen} itself, either by enabling
 @code{-export-dynamic} or by falling back to @samp{-dlpreopen self}.
+If @var{file} is @code{dummy} libtool will make sure that
+@var{lt_preloaded_symbols} is always @emph{defined}, regardless of whether
+it's empty or not.
 
 @item -dlpreopen @var{file}
 Link @var{file} into the output program, and add its symbols to
@@ -1273,6 +1280,10 @@ If @var{output-file} is a libtool library, use interface version
 information @var{current}, @var{revision}, and @var{age} to build it
 (@pxref{Versioning}).  Do @strong{not} use this flag to specify package
 release information, rather see the @samp{-release} flag.
+
+@item -Wl,@var{flag}
+@itemx -Xlinker @var{flag}
+Pass a linker specific flag directly to the linker.
 @end table
 
 If the @var{output-file} ends in @samp{.la}, then a libtool library is
