--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (link_static_flag, ac_cv_prog_cc_static): Use the
+	latter in the test.
+
 1999-06-18  Thomas Tanner  <tanner@ffii.org>
 
 	* ltconfig.in (bsdi4, deplibs_check_method): use a less restrictive
