--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-06-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (freebsd*, shlibpath_overrides_runpath): Set to yes
+	up to release 3.1, and to no from 3.2 on.
+	Reported by Pavel Roskin <pavel_roskin@geocities.com>
+
 1999-06-29  Pavel Roskin <pavel_roskin@geocities.com>, Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (freebsd*, shlibpath_overrides_runpath): Set to
