--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+1999-06-29  Thomas Tanner  <tanner@ffii.org>
+
+	* NEWS: mention -no-fast-install, rename dummy to force
+	* doc/PLATFORMS: 1.3b passes all tests on GNU/Linux,
+	  FreeBSD (2.2.6 and 3.1)
+	* doc/libtool.texi: it's possible to link libtool libraries
+	  using -L and -l, better documentation of uninstall and clean mode,
+	  rename dummy to force, documented -no-fast-install,
+	  AC_LIBLTDL_* must be called before AC_PROG_LIBTOOL,
+	  documented hardcode_into_libs and striplib/old_striplib,
+	* ltconfig.in: search for strip program, added hardcode_into_libs
+	  and striplib/old_striplib variables, set strip commands for GNU strip,
+	  on FreeBSD >= 3.2 set hardcode_into_libs to yes,
+	  fast-install mode doesn't work if hardcode_into_libs = yes
+	* ltmain.in: reimplemented hardcoding into libraries:
+	  new relink mode, preserve all libtool args, relink libraries
+	  when installing if necessary
+	  added -no-fast-install flag, removed unnecessary `dlname'
+	  initialization, use striplib/old_striplib for stripping libraries,
+	  dlname is always soname or in library_names so we don't need
+	  to handle different file names
+
 1999-06-29  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltconfig.in (freebsd*, shlibpath_overrides_runpath): Set to yes
