--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ New in 1.3b: 1999-??-??; CVS version 1.3a, Libtool team:
   directly to the compiler
 * New "-Wl,flag" and "-Xlinker flag" flags to pass flags
   directly to the linker
+* New "-no-fast-install" flag to selectively disable fast-install mode.
 * Support for installing stripped libraries using GNU strip (install -s).
   Automake >= 1.5 will install stripped libraries with "make install-strip".
 * Support for linking DLLs on Win32
@@ -17,7 +18,7 @@ New in 1.3b: 1999-??-??; CVS version 1.3a, Libtool team:
 * Various bugfixes
 
 New in 1.3.3: 1999-06-2?, CVS version 1.3.2a, Libtool team:
-* New `-dlpreopen dummy' flag to ensure that
+* New `-dlpreopen force' flag to ensure that
   lt_preloaded_symbols is always defined.
 * Work around self-dlclose bug in FreeBSD 3.1.
 * Expand convenience libraries when creating reloadable objects.
